fixed whitespace bug from padding

--- a/githubForFrontEndInitial/src/App.css
+++ b/githubForFrontEndInitial/src/App.css
@@ -35,7 +35,7 @@ code {
 
 .sideBar{
   padding-top: 12vh;
-  height: 90vh;
+  height: 78vh;
   width: 15vw;
   background-color: white;
   color: black;
